--- a/info.yaml
+++ b/info.yaml
@@ -1,33 +1,33 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  title:        "Tiny Whisper"      # Project title
+  author:       "Simon Dorrer, Jonathan Hager, Matthias Jung, Harald Pretl"      # Your name
+  discord:      "simi1505"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "This chip implements a transmitter for the wireless long-reach protocol called WSPR (weak signal propagation reporter) in the shortwave frequency range (3 MHz to 30 MHz), containing a CORDIC, a DS-Modulator, and LO Generation (digital core), as well as an analog IQ Modulator."      # One line description of what your project does
   language:     "Analog" # other examples include Verilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz:     56000000       # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
-  tiles: "1x2"          # Valid values for analog projects: 1x2, 2x2
+  tiles: "2x2"          # Valid values for analog projects: 1x2, 2x2
 
   # How many analog pins does your project use?
-  analog_pins: 2        # Valid values: 0 to 6
+  analog_pins: 5        # Valid values: 0 to 6
   uses_3v3: false       # Set to true if your project uses 3.3V (VAPWR) in addition to 1.8V (VDPWR)
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_example"
+  top_module:  "tt_um_TinyWhisper"
 
   # List your project's source files here. Source files must be in ./src and you must list each source file separately, one per line:
   source_files:        
-    - "project.v"
+    - "tt_um_TinyWhisper.v"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
+  ui[0]: "push_tx_i"
+  ui[1]: "spi_mosi_i"
+  ui[2]: "uart_rx_i"
   ui[3]: ""
   ui[4]: ""
   ui[5]: ""
@@ -35,19 +35,19 @@ pinout:
   ui[7]: ""
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "dsm1_p_o"
+  uo[1]: "dsm1_n_o"
+  uo[2]: "dsm2_p_o"
+  uo[3]: "dsm2_n_o"
+  uo[4]: "LO_I_o"
+  uo[5]: "LO_IX_o"
+  uo[6]: "LO_Q_o"
+  uo[7]: "LO_QX_o"
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
+  uio[0]: "spi_miso_o"
+  uio[1]: "uart_tx_o"
+  uio[2]: "afe_en_o"
   uio[3]: ""
   uio[4]: ""
   uio[5]: ""
@@ -55,11 +55,11 @@ pinout:
   uio[7]: ""
 
   # Analog pins - make sure to also set "analog_pins" above, else the pins won't be connected
-  ua[0]: ""
-  ua[1]: ""
-  ua[2]: ""
-  ua[3]: ""
-  ua[4]: ""
+  ua[0]: "vinp_Q"
+  ua[1]: "vinn_Q"
+  ua[2]: "vinp_I"
+  ua[3]: "vinn_I"
+  ua[4]: "vout_RF"
   ua[5]: ""
 
 # Do not change!
