--- a/info.yaml
+++ b/info.yaml
@@ -45,14 +45,14 @@ pinout:
   uo[7]: "LO_QX_o"
 
   # Bidirectional pins
-  uio[0]: "afe_en_o"
-  # uio[1]: "spi_miso_o" # unused
-  # uio[2]: "uart_tx_o" # unused
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
+  uio[0]: "afe_en_o" # digital core
+  uio[1]: "afe_en_i" # analog front-end
+  uio[2]: "LO_I_i" # analog front-end
+  uio[3]: "LO_IX_i" # analog front-end
+  uio[4]: "LO_Q_i" # analog front-end
+  uio[5]: "LO_QX_i" # analog front-end
+  # uio[6]: "spi_miso_o" # unused
+  # uio[7]: "uart_tx_o" # unused
   uio[6]: ""
   uio[7]: ""
 
