updated info.yaml with UART TX output

--- a/info.yaml
+++ b/info.yaml
@@ -45,15 +45,14 @@ pinout:
   uo[7]: "LO_QX_o"
 
   # Bidirectional pins
-  uio[0]: "afe_en_o" # digital core
-  uio[1]: "afe_en_i" # analog front-end
-  uio[2]: "LO_I_i" # analog front-end
-  uio[3]: "LO_IX_i" # analog front-end
-  uio[4]: "LO_Q_i" # analog front-end
-  uio[5]: "LO_QX_i" # analog front-end
-  # uio[6]: "spi_miso_o" # unused
-  # uio[7]: "uart_tx_o" # unused
-  uio[6]: ""
+  uio[0]: "uart_tx_o" # digital core
+  uio[1]: "afe_en_o" # digital core
+  uio[2]: "afe_en_i" # analog front-end
+  uio[3]: "LO_I_i" # analog front-end
+  uio[4]: "LO_IX_i" # analog front-end
+  uio[5]: "LO_Q_i" # analog front-end
+  uio[6]: "LO_QX_i" # analog front-end
+  # uio[7]: "spi_miso_o" # unused
   uio[7]: ""
 
   # Analog pins - make sure to also set "analog_pins" above, else the pins won't be connected
