--- a/.github/workflows/gds.yaml
+++ b/.github/workflows/gds.yaml
@@ -41,4 +41,4 @@ jobs:
       pages: write      # to deploy to Pages
       id-token: write   # to verify the deployment originates from an appropriate source
     steps:
-      - uses: TinyTapeout/tt-gds-action/viewer@ttsky25a
+      - uses: TinyTapeout/tt-gds-action/viewer@ttsky25b
